[project]
name = "construct-additional-obelisks"
version = "0.1.0"
description = "The one Obelisk client to rule them all"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ruff>=0.9.6",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"